<resources>
    <string name="app_name">Projetinho Bossini</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ip_server">http://10.42.0.1:3000</string>
    <!--<string name="ip_server">http://10.67.172.170:3000</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">example@fatec.com</string>
    <string name="telefone">(xx)xxxx-xxxx</string>
    <string name="phone">(xx)xxxxx-xxxx</string>
    <string name="company">CompanyOfFuture</string>
    <string name="website">Facebook.com/FATEC</string>
    <string name="message">Please, send a message for us.</string>
</resources>
